cilium-cli/connectivity/builder/manifests/client-with-service-account-egress-to-echo-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: client-with-service-account-egress-to-echo-deny
spec:
  description: "Deny client with service account endpoint selector to echo service"
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: client
  egressDeny:
  - toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
    toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: cilium-test
        kind: echo
      matchExpressions:
      - { key: io.cilium.k8s.policy.cluster, operator: Exists }
